# tasks

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README
common/: io.hpp  types.hpp
common/io/: io.hpp  repl.hpp  task_repl.hpp
common/structures/: edge.hpp  edge_key.hpp  edge_key_hasher.hpp  graph.hpp  graph_action_results.hpp  vertex.hpp
task1.1/: CMakeLists.txt  edge.h  edge.hpp  graph.h  graph.hpp  graph_task1_full_tester.py  main.cpp
task1.2/: CMakeLists.txt  main.cpp  types.hpp  vertex.hpp
task1.3/: CMakeLists.txt  edge.hpp  graph.hpp  main.cpp
task1.4/: .clang-tidy  CMakeLists.txt  graph.hpp  main.cpp  vertex.hpp
tests/: tasks_tester.py
tests/task1.1/: 01.in  02.in  02.out  03.in  03.out
tests/task1.2/: 02.in  03.in  03.out
tests/task1.3/: 01.in  02.in  03.in  04.in  05.in
tests/task1.4/: 01.in  01.out  02.in  03.in  03.out
